--- a/css/main.css
+++ b/css/main.css
@@ -316,6 +316,7 @@ body {
   margin-bottom: 30px;
   position: relative;
   cursor: pointer;
+  display: inline-block;
 }
 
 .modal-checkbox__text span {
@@ -324,9 +325,9 @@ body {
   border: 2px solid var(--primary-title-color);
   border-radius: 3px;
   margin-right: 8px;
-  display: flex;
   align-items: center;
   justify-content: center;
+  vertical-align: middle;
   box-shadow: 0px 4px 4px 0px #00000040;
   transition: border-color var(--timing-function), background-color var(--timing-function), box-shadow var(--timing-function);
 }
@@ -351,6 +352,14 @@ body {
   color: var(--accent-color);
 }
 
+.modal-checkbox__icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 16px;
+  height: 15px;
+  transition: var(--timing-function);
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -358,7 +367,7 @@ body {
 .header-navigation {
   display: flex;
   align-items: center;
-  margin-left: auto;
+  margin-left: 88px;
 }
 
 .header-navigation__list {
@@ -401,14 +410,8 @@ body {
   color: var(--accent-color);
 }
 
-.header-contact__list {
-  display: flex;
-}
-
 @media screen and (min-width: 768px) {
   .header-contact__list {
-    display: flex;
-    flex-direction: column;
     margin-left: auto;
   }
 }
@@ -416,8 +419,8 @@ body {
 @media screen and (min-width: 1200px) {
   .header-contact__list {
     display: flex;
-    flex-direction: row;
-    margin-left: auto;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -449,6 +452,18 @@ body {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__link-top {
+    padding-top: 21px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact__link-bottom {
+    padding-bottom: 21px;
+  }
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -465,7 +480,7 @@ body {
   margin-right: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .header-contact__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -496,7 +511,7 @@ body {
 
 @media screen and (max-width: 767px) {
   .hero-section {
-    max-width: 480px;
+    max-width: 767px;
     background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_mobile_480@1x.jpg);
   }
 }
@@ -511,7 +526,7 @@ body {
   .hero-section {
     padding-top: 118px;
     padding-bottom: 118px;
-    max-width: 768px;
+    max-width: 1199px;
     background-image: linear-gradient(to right, rgba(47, 58, 57, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_tablet_768@1x.jpg);
   }
 }
@@ -925,6 +940,12 @@ body {
   }
 }
 
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .footer-address {
+    text-align: center;
+  }
+}
+
 .logo-contacts {
   display: block;
   margin-bottom: 20px;
@@ -988,7 +1009,7 @@ body {
   color: var(--secondary-title-color);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .joinus__title {
     text-align: center;
   }
@@ -1047,7 +1068,12 @@ body {
   line-height: calc(16 / 14);
   text-transform: uppercase;
   color: var(--secondary-title-color);
-  text-align: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe__title {
+    text-align: center;
+  }
 }
 
 .subscribe-form {
@@ -1220,6 +1246,12 @@ body {
   transition: box-shadow var(--timing-function);
 }
 
+@media screen and (max-width: 767px) {
+  .portfolio-list__link {
+    margin-bottom: 30px;
+  }
+}
+
 .portfolio-list__link:hover, .portfolio-list__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -1238,6 +1270,8 @@ body {
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
+  overflow-y: scroll;
+  flex-grow: 1;
   color: var(--secondary-title-color);
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
@@ -1253,6 +1287,9 @@ body {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .card-block__title {
@@ -1284,6 +1321,7 @@ body {
   height: 100vh;
   z-index: 2;
   overflow-y: scroll;
+  display: block;
 }
 
 @media screen and (min-width: 768px) {
@@ -1329,11 +1367,12 @@ body {
 }
 
 .menu-open {
-  top: 10px;
-  right: 15px;
+  top: 25px;
+  right: 21px;
   margin: 0;
   padding: 0;
   border: none;
+  cursor: pointer;
   background-color: transparent;
   transition: fill var(--timing-function);
 }
@@ -1349,8 +1388,9 @@ body {
 }
 
 .mobile-nav.is-hidden {
-  opacity: 0;
   pointer-events: none;
+  transform: translateX(100%);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu__item {
@@ -1438,10 +1478,15 @@ body {
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
+  color: var(--accent-color);
 }
 
 .mobile-network__link:hover, .mobile-network__link:focus {
-  color: var(--accent-color);
+  color: var(--secondary-text-color);
+}
+
+.mobile-nav {
+  transform: translateX(0);
+  transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
