--- a/sass/layout/_mob-menu.scss
+++ b/sass/layout/_mob-menu.scss
@@ -47,11 +47,12 @@
 }
 
 .menu-open {
-  top: 10px;
-  right: 15px;
+  top: 25px;
+  right: 21px;
   margin: 0;
   padding: 0;
   border: none;
+  cursor: pointer;
   background-color: transparent;
   transition: fill var(--timing-function);
   &:hover,
