--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -27,6 +27,9 @@
 .portfolio-list__link {
   display: block;
   transition: box-shadow var(--timing-function);
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -48,7 +51,8 @@
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
-
+  overflow-y: scroll;
+  flex-grow: 1;
   color: var(--secondary-title-color);
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
@@ -63,16 +67,13 @@
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .card-block__title {
-  @include font(null, 18px, 700, 2, 0.06em, var(--primary-title-color))
-    // font-weight: 700;
-    // font-size: 18px;
-    // line-height: 2;
-    // letter-spacing: 0.06em;
-    // color: var(--primary-title-color);
-;
+  @include font(null, 18px, 700, 2, 0.06em, var(--primary-title-color));
 }
 
 .card-block__text {
